# cat-watcher

./: .gitignore  Cargo.toml  README.md
.github/: copilot-instructions.md
.github/instructions/: rust.instructions.md
.github/skills/drawio/: CLAUDE.md
.github/skills/mermaid/: SKILL.md
.github/workflows/: ci.yml  probe-windows.yml  release.yml  windows-events.yml
cat-watcher/: Cargo.toml  build.rs
cat-watcher/src/: config.rs  csv_import.rs  error.rs  hash.rs  integrity.rs  logger.rs  main.rs  placeholder.rs  router.rs  templates.rs  watcher.rs
cat-watcher/src/actions/: command.rs  common.rs  copy.rs  execute.rs  mod.rs  move.rs
config/: global.toml  rules.toml  tests_rules.toml
csv2toml/: Cargo.toml
doc/: branch-strategy.md  detailed-design.md  implementation-plan.md  requirements.md  specification.md
doc/設計下書き/: design.md  example.csv
notify-fork/: Cargo.toml
notify-fork/src/: windows.rs
raw-events/: Cargo.toml
raw-events/src/: main.rs
tool/: create_random_files.ps1  tes.ps1
