[package]
name = "cat-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
regex = "1"
globset = "0.4"
clap = { version = "4.6.0", features = ["derive"] }
chrono = { version = "0.4", features = ["now"] }

[dev-dependencies]
tempfile = "3"