[package]
name = "cat-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
regex = "1"
globset = "0.4"
clap = { version = "4.6.0", features = ["derive"] }
chrono = { version = "0.4", features = ["now"] }
notify = "8.2.0"
tokio = { version = "1.51.1", features = ["rt-multi-thread", "macros", "sync", "signal", "time", "fs", "process"] }
blake3 = "1"
walkdir = "2"
[dev-dependencies]
tempfile = "3"